--- a/src/ethercat_manager/CMakeLists.txt
+++ b/src/ethercat_manager/CMakeLists.txt
@@ -1,9 +1,9 @@
-add_library( ethercatmanager 
+add_library( EthercatManager 
 
     ethercat_manager.cpp
     ecat_dc.c 
 )
 
-target_link_libraries( ethercatmanager
+target_link_libraries( EthercatManager
     ${LIB_XENOMAI}
 )
