--- a/src/robot_control/CMakeLists.txt
+++ b/src/robot_control/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_library(robotclient 
+add_library(RobotJointClient 
 
     robot_client.cpp
 )
-target_link_libraries(robotclient 
-    ethercatmanager
-    elmoclient
+target_link_libraries(RobotJointClient 
+    EthercatManager
+    ElmoClient
 )
