--- a/src/robot_control/CMakeLists.txt
+++ b/src/robot_control/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(RobotJointClient 
 
-    robot_client.cpp
+    robot_joint_client.cpp
 )
 target_link_libraries(RobotJointClient 
     EthercatManager
