add code example

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -31,4 +31,34 @@ target_link_libraries(pid_test Controller)
 
 add_executable(pos_test pos_test.cpp)
 target_link_libraries(pos_test RobotJointClient)
+
+add_executable(pos_test_1 pos_test_1.cpp)
+target_link_libraries(pos_test_1 RobotJointClient)
+
+add_executable(csp_test csp_test.cpp)
+target_link_libraries(csp_test RobotJointClient)
+
+add_executable(csv_test csv_test.cpp)
+target_link_libraries(csv_test RobotJointClient)
+
+add_executable(cst_test cst_test.cpp)
+target_link_libraries(cst_test RobotJointClient)
+
+add_executable(pp_test pp_test.cpp)
+target_link_libraries(pp_test RobotJointClient)
+
+add_executable(pv_test pv_test.cpp)
+target_link_libraries(pv_test RobotJointClient)
+
+add_executable(pt_test pt_test.cpp)
+target_link_libraries(pt_test RobotJointClient)
+
+add_executable(halt_test halt_test.cpp)
+target_link_libraries(halt_test RobotJointClient)
+
+add_executable(quick_stop_test quick_stop_test.cpp)
+target_link_libraries(quick_stop_test RobotJointClient)
+
+add_executable(read_chip_temp read_chip_temp.cpp)
+target_link_libraries(read_chip_temp RobotJointClient)
 ################################################################
